feat: add page access control for v2 api
see https://gravitee.atlassian.net/browse/GKO-275
