# api/model/api/base/zz_generated.deepcopy.go
@@ -25,6 +25,21 @@ import (
 )
 
 // DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
+func (in *AccessControl) DeepCopyInto(out *AccessControl) {
+	*out = *in
+}
+
+// DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new AccessControl.
+func (in *AccessControl) DeepCopy() *AccessControl {
+	if in == nil {
+		return nil
+	}
+	out := new(AccessControl)
+	in.DeepCopyInto(out)
+	return out
+}
+
+// DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
 func (in *ApiBase) DeepCopyInto(out *ApiBase) {
 	*out = *in
 	if in.Tags != nil {
@@ -386,6 +401,11 @@ func (in *Page) DeepCopyInto(out *Page) {
 		for key, val := range *in {
 			(*out)[key] = val
 		}
+	}
+	if in.AccessControls != nil {
+		in, out := &in.AccessControls, &out.AccessControls
+		*out = make([]AccessControl, len(*in))
+		copy(*out, *in)
 	}
 }
 
